...


    </FrameLayout>


    <LinearLayout
        android:id="@+id/bottom_background"
        android:background="@color/card_background_color"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">
...
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/learned_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
