...
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/keyline_6"
        android:layout_marginTop="@dimen/keyline_6"
        android:layout_marginEnd="@dimen/keyline_6"
        style="@style/Purchase.Card.Theme"
        android:theme="@style/Purchase.Card.Theme"
        app:layout_constraintBottom_toTopOf="@+id/cardView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                app:layout_constraintEnd_toEndOf="@id/translation_card"
                app:layout_constraintStart_toStartOf="@id/translation_card"
                app:layout_constraintTop_toBottomOf="@+id/progress_count_textview"
                app:rcBackgroundPadding="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_word_home"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/keyline_6"
                android:layout_marginBottom="@dimen/keyline_4"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
...
                app:layout_constraintTop_toBottomOf="@id/start_training_progress"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp"
                app:backgroundTint="@color/colorPrimary"
                app:rippleColor="#D8C9E8"
                app:cornerRadius="30dp"
                android:text="Learn"
                android:textColor="@color/primary_text_color_white"
                android:fontFamily="@font/productbold"
                android:insetTop="0dp"
                android:insetBottom="0dp" />


...
